tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/invalid/only-app_secret-sdk.php
<?php

return [
    'facebook' => [
        'sdk' => [
            'config' => [
                'app_secret' => 'secret',
            ],
        ],
        'ads' => [
            'enabled' => false,
        ],
    ],
];
